--- a/src/sample/sample.fxml
+++ b/src/sample/sample.fxml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.layout.AnchorPane?>
-<AnchorPane xmlns:fx="http://javafx.com/fxml/1" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity"
-            minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.172-ea">
+
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.172-ea" xmlns:fx="http://javafx.com/fxml/1">
     <children>
-        <Button layoutX="260.0" layoutY="154.0" mnemonicParsing="false" text="Home"/>
+        <Button layoutX="260.0" layoutY="154.0" mnemonicParsing="false" text="Home" />
+      <Button layoutX="258.0" layoutY="200.0" mnemonicParsing="false" text="Dashboard" />
     </children>
 </AnchorPane>
